show 'days left' for whitelist

--- a/stratum0/templates/stratum0/details.html
+++ b/stratum0/templates/stratum0/details.html
@@ -33,12 +33,21 @@ function update_stratum0_display(s0_dom_id, json_data) {
         location.reload();
     }
 
-    $(s0_dom_id + " .stratum0_revision"        ).html(stratum0.revision);
+    var whitelist_expiry_in = new Date(stratum0.whitelist_expiry) - new Date();
+    var whitelist_days      = Math.floor(whitelist_expiry_in / 1000 / 60 / 60 / 24);
+
+    $(s0_dom_id + " .stratum0_revision"             ).html(stratum0.revision);
     // .min_stratum1_revision is updated dynamically in stratum1_display!
-    $(s0_dom_id + " .stratum0_version"         ).html(stratum0.version);
-    $(s0_dom_id + " .stratum0_last_modified"   ).html(format_timestamp(stratum0.last_modified));
-    $(s0_dom_id + " .stratum0_whitelist_expiry").html(format_timestamp(stratum0.whitelist_expiry));
-    $(s0_dom_id + " .stratum0_root_catalog"    ).html(stratum0.root_catalog_hash);
+    $(s0_dom_id + " .stratum0_version"              ).html(stratum0.version);
+    $(s0_dom_id + " .stratum0_last_modified"        ).html(format_timestamp(stratum0.last_modified));
+    $(s0_dom_id + " .stratum0_whitelist_expiry"     ).html(format_timestamp(stratum0.whitelist_expiry));
+    $(s0_dom_id + " .stratum0_whitelist_expiry_left").html(" (" + whitelist_days + " days left)");
+    $(s0_dom_id + " .stratum0_root_catalog"         ).html(stratum0.root_catalog_hash);
+
+    if (whitelist_days <= 3) {
+        $(s0_dom_id + " .stratum0_whitelist_expiry_left").css({"color": "#FF0000",
+                                                               "font-weight": "bold"});
+    }
 
     return s0_dom_id;
 }
@@ -175,7 +184,7 @@ window.onload = function() {
         </tr>
         <tr>
             <td>Whitelist Expiry Date:</td>
-            <td class="stratum0_whitelist_expiry"></td>
+            <td><span class="stratum0_whitelist_expiry"></span> <span class="stratum0_whitelist_expiry_left"></span></td>
         </tr>
         <tr>
             <td>Root Catalog Hash:</td>
