--- a/stratum0/templates/stratum0/matrix.html
+++ b/stratum0/templates/stratum0/matrix.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block breadcrumbs %}{{ block.super }} : <a href="{% url 'index' %}">Stratum0</a> : <a href="{% url 'matrix' %}">Matrix View</a>{% endblock %}
+{% block breadcrumbs %}{{ block.super }} : <a href="{% url stratum0.views.index %}">Stratum0</a> : <a href="{% url stratum0.views.matrix %}">Matrix View</a>{% endblock %}
 
 {% load staticfiles %}
 
@@ -16,7 +16,7 @@ var stratum1s = [
 {
     "id"            : "{{ stratum1.id   }}",
     "name"          : "{{ stratum1.replication_site.name }}",
-    "info_url"      : "{% url 'stratum1_details' stratum1.stratum0.fqrn stratum1.id %}"
+    "info_url"      : "{% url stratum0.views.stratum1_details stratum1.stratum0.fqrn stratum1.id %}"
 },
 {% endif %}{% endfor %}{% endfor %}
 ];
@@ -74,7 +74,7 @@ window.onload = function() {
         </tr>
         {% for stratum1s in stratum1_map %}
         <tr>
-            <td><b><a href="{% url 'details' stratum1s.0.fqrn  %}">{{ stratum1s.0.name }}</a></b></td>
+            <td><b><a href="{% url stratum0.views.details stratum1s.0.fqrn  %}">{{ stratum1s.0.name }}</a></b></td>
             {% for stratum1 in stratum1s.1 %}
             <td>
                 <div style="width: 45px; height: 45px; margin: 15px">
