--- a/stratum0/templates/stratum0/details.html
+++ b/stratum0/templates/stratum0/details.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block breadcrumbs %}{{ block.super }} : <a href="{% url 'index' %}">Stratum0</a> : <a href="{% url 'details' stratum0.fqrn %}">{{ stratum0.fqrn }}</a>{% endblock %}
+{% block breadcrumbs %}{{ block.super }} : <a href="{% url stratum0.views.index %}">Stratum0</a> : <a href="{% url stratum0.views.details stratum0.fqrn %}">{{ stratum0.fqrn }}</a>{% endblock %}
 
 {% load staticfiles %}
 
