FIX: template quotation

--- a/cvmfs_web/templates/layout.html
+++ b/cvmfs_web/templates/layout.html
@@ -13,8 +13,8 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="{% url stratum0.views.index %}">Replication Monitor</a></li>
-        <li><a href="{% url stratum0.views.matrix %}">Replication Matrix</a></li>
+        <li><a href="{% url 'stratum0.views.index' %}">Replication Monitor</a></li>
+        <li><a href="{% url 'stratum0.views.matrix' %}">Replication Matrix</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
